fix error on deploy k8s

--- a/manifest/dev/deployment.yaml
+++ b/manifest/dev/deployment.yaml
@@ -23,5 +23,5 @@ spec:
           envFrom:
             - secretRef:
                 name: week-9-tcc231001
-            - configmapRef:
+            - configMapRef:
                 name: week-9-tcc231001
