--- a/manifest/dev/ingress.yaml
+++ b/manifest/dev/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-  name: group-5-ingress
+  name: week-9-tcc231001
 spec:
   ingressClassName: nginx
   rules:
