--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -81,12 +81,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set container image in Deployment YAML
-        run: |
-          # sed -i "s|image: application_image|image: ${{ vars.APP_IMAGE }}:$GITHUB_SHA|g" deployment.yaml
-          # | export IMAGE_NAME="${{ vars.APP_IMAGE }}:${{ github.sha }}"
-          yq eval '.spec.template.spec.containers[0].image = ${{ vars.APP_IMAGE }}:${{ github.sha }}' deployment.yaml | kubectl apply -f -
-
       - name: Set up kubeconfig
         run: echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig
 
@@ -99,9 +93,10 @@ jobs:
         run: cat $HOME/.kube/config
 
       - name: Set KUBE_CONTEXT
-        run: echo "KUBE_CONTEXT=${{ secrets.KUBE_CONTEXT }}" >> $GITHUB_ENV
-
-      - name: Deploy to Kubernetes
         run: |
+          echo "KUBE_CONTEXT=${{ secrets.KUBE_CONTEXT }}" >> $GITHUB_ENV
           kubectl config use-context "${{ secrets.KUBE_CONTEXT }}"
-          kubectl apply -f .
+
+      - name: Update deploy to k8s
+        run: |
+          yq eval '.spec.template.spec.containers[0].image = ${{ vars.APP_IMAGE }}:${{ github.sha }}' deployment.yaml | kubectl apply -f -
