--- a/.github/workflows/sample_csharp.yaml
+++ b/.github/workflows/sample_csharp.yaml
@@ -100,4 +100,5 @@ jobs:
       - name: Update deploy to k8s
         run: |
           export APP_IMAGE_URL=${{ vars.APP_IMAGE }}:${{ github.sha }}
-          yq eval --sub_env '.spec.template.spec.containers[0].image = $APP_IMAGE_URL' deployment.yaml | kubectl apply -f -
+          yq -i '.spec.template.spec.containers[0].image = strenv(APP_IMAGE_URL)' deployment.yaml
+          kubectl apply -f deployment.yaml
